@@ -101,6 +101,12 @@ ArticulationInfo Articulation::articulationList[ARTICULATIONS] = {
             100, 100, ARTICULATION_SHOW_IN_PITCHED_STAFF | ARTICULATION_SHOW_IN_TABLATURE  },
 	{ downmordentSym,      QT_TRANSLATE_NOOP("articulation", "downmordent"),
             100, 100, ARTICULATION_SHOW_IN_PITCHED_STAFF | ARTICULATION_SHOW_IN_TABLATURE  },
+	{ pralldownSym,      QT_TRANSLATE_NOOP("articulation", "pralldown"),
+            100, 100, ARTICULATION_SHOW_IN_PITCHED_STAFF | ARTICULATION_SHOW_IN_TABLATURE  },
+	{ prallupSym,      QT_TRANSLATE_NOOP("articulation", "prallup"),
+            100, 100, ARTICULATION_SHOW_IN_PITCHED_STAFF | ARTICULATION_SHOW_IN_TABLATURE  },
+	{ lineprallSym,      QT_TRANSLATE_NOOP("articulation", "lineprall"),
+            100, 100, ARTICULATION_SHOW_IN_PITCHED_STAFF | ARTICULATION_SHOW_IN_TABLATURE  },
       { snappizzicatoSym,    QT_TRANSLATE_NOOP("articulation", "snappizzicato"),
             100, 100, ARTICULATION_SHOW_IN_PITCHED_STAFF | ARTICULATION_SHOW_IN_TABLATURE  },
       { letterTSym,    QT_TRANSLATE_NOOP("articulation", "tapping"),
